2012-04-03  Roland Clobus <rclobus@rclobus.nl>
	* common/network.c, common/network.h, server/admin.c: Restrict
	knowledge of the Session struct to network.c

2012-03-28  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/callbacks.c, client/common/client.c: Show and hide nosetup
	nodes for the viewer too.
	* common/game.c: Don't send strings twice in game settings.

2012-03-21  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c, common/gtk/game-rules.c,
	common/gtk/game-rules.h, common/game.c, common/game.h,
	server/gtk/main.c: Added island discovery bonus widget. Cleanup of
	params in the editor (with thanks to Micah Bunting for the initial
	version).

2012-02-24  Roland Clobus <rclobus@rclobus.nl>
	* common/game.c, common/map.c: Moved NULL check to map_free.

2012-02-12  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am: Added 'pristine' target to remove svn:ignore files.
	* configure.ac: Split AC_CONFIG_FILES. Needed for MinGW builds.
	* client/gtk/resource-view.gob: Fixed layout bug introduced 2011-11-12.

2012-02-10  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, Makefile.am, client/gtk/data/Makefile.am: The script
	rsvg is deprecated. Using rsvg-convert which was called by rsvg.
	* MinGW/Makefile.am: MinGW port requires libssp-0.dll too. Also use
	the install-hook to automagically install the DLLs.

2012-02-09  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Use the same flags as for Debian hardening and also
	use the minimal linking flags.
	* common/game.c, common/game.h, server/server.c: Find duplicate games.

2012-02-02  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am: Don't include source files in BUILT_SOURCES.
	* common/Makefile.am, common/gtk/Makefile.am, client/gtk/Makefile.am:
	Better marking for gob related files.

2012-01-30  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/Makefile.am, server/gtk/Makefile.am, Makefile.am,
	client/gtk/data/Makefile.am: Created the large icons for the GNOME 3
	desktop.